代理设计模式小修改

--- a/代理设计模式.md
+++ b/代理设计模式.md
@@ -131,7 +131,7 @@ public class Main {
 
 `        ISale o = (ISale)Proxy.newProxyInstance(ISale.class.getClassLoader(), new Class[]{ISale.class}, saleProxy);`的解释：
 
-​	此举是为获取代理类`ISale.class.getClassLoader()`指定了类的加载器，也就是说指定了代理类代理的是谁？返回的是谁的类。`new Class[]{ISale.class}`是接口列表，指定了被代理的类实现了哪些接口`saleProxy`是中间类，定义了在真实类基础上被修改的内容。
+​	此举是为获取代理类。`ISale.class.getClassLoader()`指定了类的加载器，也就是说指定了代理类代理的是谁？返回的是谁的类。`new Class[]{ISale.class}`是接口列表，指定了被代理的类实现了哪些接口。`saleProxy`是中间类，定义了在真实类基础上被修改的内容。
 
 ​	即返回了一个实现了ISale接口的ISale实例化对象，且ISale实例化对象的方法已经按照`saleProxy`里定义的内容所修改增加。
 
