代理设计模式笔记

--- a/代理设计模式.md
+++ b/代理设计模式.md
@@ -133,6 +133,8 @@ public class Main {
 
 ​	此举是为获取代理类。`ISale.class.getClassLoader()`指定了类的加载器，也就是说指定了代理类代理的是谁？返回的是谁的类。`new Class[]{ISale.class}`是接口列表，指定了被代理的类实现了哪些接口。`saleProxy`是中间类，定义了在真实类基础上被修改的内容。
 
+[简书 动态代理模式](https://www.jianshu.com/p/305c8da4563d)
+
 ![image-20200318132908799](%E4%BB%A3%E7%90%86%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/image-20200318132908799.png)
 
 ​	即返回了一个实现了ISale接口的ISale实例化对象，且ISale实例化对象的方法已经按照`saleProxy`里定义的内容所修改增加。
