--- a/报价.md
+++ b/报价.md
@@ -46,6 +46,12 @@
 
       ​	**注：流量限制1g/月，内网穿透仅用在session传输，不花钱的够用**
 
+## 价格总计
+
+按低配计价的话（即我画对号的项目）   初始花费315元，此后每月花费10元
+
+按高配计价  初始花费1016元  此后每年花438元
+
 
 
 
