--- a/2020-4-18 mybaits 学习笔记 171812.md
+++ b/2020-4-18 mybaits 学习笔记 171812.md
@@ -6,8 +6,6 @@
 MyBatis 是一款优秀的持久层框架，它支持自定义 SQL、存储过程以及高级映射。MyBatis 免除了几乎所有的 JDBC 代码以及设置参数和获取结果集的工作。MyBatis 可以通过简单的 XML 或注解来配置和映射原始类型、接口和 Java POJO（Plain Old Java Objects，普通老式 Java 对象）为数据库中的记录。
 ```
 
-
-
 ## 1.下载安装
 
 **GitHub：[mybatis3.5.2](https://github.com/mybatis/mybatis-3/releases/download/mybatis-3.5.2/mybatis-3.5.2.zip)**
@@ -559,6 +557,12 @@ Usermapper.xml
 
 ## 5.结果映射
 
+```xml
+<resultMap id="UserMap" type="ssm.suyuesheng.domain.User">
+    <result column="pwd" property="password"/>
+</resultMap>
+```
+
 ## 6.日志工厂
 
 在config.xml里面配置settings 里面的setting
@@ -600,7 +604,7 @@ Usermapper.xml
 </dependency>
 ```
 
-
+[log4j配置详解](https://www.jianshu.com/p/ccafda45bcea)
 
 #### log4.properties
 
@@ -653,7 +657,7 @@ Logger logger = Logger.getLogger(Thread.currentThread().getStackTrace()[1].getCl
 
 ## 7.分页
 
-### limit(重点)
+### 7.1limit(重点)
 
 Dao
 
@@ -695,9 +699,9 @@ public void testOne(){
 
 
 
-### rowbound（面向对象）
+### 7.2rowbound（面向对象）
 
-### pagehelper（插件）
+### 7.3pagehelper（插件）
 
 ## 8.面向注解
 
@@ -714,8 +718,13 @@ public interface UserMapper {
 }
 ```
 
+**以后`@param`如果是基本数据类型就用。**
 
+$和#的区别
 
+https://blog.csdn.net/u013552450/article/details/72528498
+
+![image-20200420222810999](image-20200420222810999.png)
 
 
 
