--- a/2020-4-18 mybaits 学习笔记 171812.md
+++ b/2020-4-18 mybaits 学习笔记 171812.md
@@ -759,8 +759,9 @@ public void testOne(){
 
 ## 8.面向注解
 
+![image-20200423062933070](2020-4-18%20mybaits%20%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0%20171812.assets/image-20200423062933070.png)
+
 ```java
-@Alias("student")
 public interface UserMapper {
 
     List<User> findAll();
