--- a/2020-4-18 mybaits 学习笔记 171812.md
+++ b/2020-4-18 mybaits 学习笔记 171812.md
@@ -569,7 +569,7 @@ Usermapper.xml
 User.java
 
 ```java
-@Alias("author")
+@Alias("author")     //必须在typealias指定package后@Alias("")才会有效果
 public class User {
     private int id;
     private String name;
