--- a/2020-4-18 mybaits 学习笔记 171812.md
+++ b/2020-4-18 mybaits 学习笔记 171812.md
@@ -775,7 +775,7 @@ public interface UserMapper {
 
 **以后`@param`如果是基本数据类型就用。**
 
-$和#的区别
+### $和#的区别
 
 https://blog.csdn.net/u013552450/article/details/72528498
 
@@ -783,4 +783,232 @@ https://blog.csdn.net/u013552450/article/details/72528498
 
 
 
+## 9.lombok
 
+### 9.1 简介
+
+> Lombok项目是一个Java库，它会自动插入编辑器和构建工具中，Lombok提供了一组有用的注释，用来消除Java类中的大量样板代码。仅五个字符(@Data)就可以替换数百行代码从而产生干净，简洁且易于维护的Java类。
+>
+> 来源百度百科  https://baike.baidu.com/item/Lombok/23780246?fr=aladdin
+
+### 9.2 安装
+
+*在idea安装*
+
+![在idea安装](2020-4-18%20mybaits%20%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0%20171812.assets/image-20200424162528788.png)
+
+*导包*
+
+```xml
+<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.8</version>
+    <!-- scope 可以去掉 -->
+    <scope>provided</scope>
+</dependency>
+```
+
+### 9.3 使用
+
+> 常用注解：
+>
+> @Setter ：注解在类或字段，注解在类时为所有字段生成setter方法，注解在字段上时只为该字段生成setter方法。
+>
+> @Getter ：使用方法同上，区别在于生成的是getter方法。
+>
+> @ToString ：注解在类，添加toString方法。
+>
+> @EqualsAndHashCode： 注解在类，生成hashCode和equals方法。
+>
+> @NoArgsConstructor： 注解在类，生成无参的构造方法。
+>
+> @RequiredArgsConstructor： 注解在类，为类中需要特殊处理的字段生成构造方法，比如final和被@NonNull注解的字段。
+>
+> @AllArgsConstructor： 注解在类，生成包含类中所有字段的构造方法。
+>
+> @Data： 注解在类，生成setter/getter、equals、canEqual、hashCode、toString方法，如为final属性，则不会为该属性生成setter方法。
+>
+> @Slf4j： 注解在类，生成log变量，严格意义来说是常量。
+
+java代码这样写👇
+
+```java
+@Alias("student")
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+public class User {
+    private int id;
+    private String name;
+    private String password;
+}
+```
+
+因为添加了几个注解，好多方法就自动生成了👇
+
+![image-20200424164135826](2020-4-18%20mybaits%20%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0%20171812.assets/image-20200424164135826.png)
+
+## 10 多对一
+
+假设学生和老师 老师一个，学生多个
+
+### sql语句
+
+```sql
+show databases ;
+use mybatisstudy;
+show tables ;
+select * from user;
+show create table user;
+create table `teacher`(
+    `id` int primary key ,
+    `name` varchar(20) not null
+)default charset=utf8;
+insert into teacher values (1,'老程');
+select * from teacher;
+create table `student`(
+    `id` int primary key ,
+    `name` varchar(20) not null ,
+    `tid` int,
+    constraint `t-sid` foreign key (`tid`) references `teacher` (`id`)
+)default charset=utf8;
+desc student;
+insert into student values(1,'老黑',1);
+insert into student values(2,'老柳',1);
+insert into student values(3,'老六',1);
+insert into student values(4,'老苏',1);
+insert into student values(5,'老李',1);
+select * from student;
+```
+
+*关系👇*
+
+![image-20200424172054317](2020-4-18%20mybaits%20%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0%20171812.assets/image-20200424172054317.png)
+
+### 环境搭建流程
+
+pom.xml继承父pom.xml
+
+1. 建立实体类
+
+   1. ```java
+      @Data
+      @NoArgsConstructor
+      @AllArgsConstructor
+      public class Student {
+          private int id;
+          private String name;
+          /**
+           * 关联老师
+           */
+          private Teacher teacher;
+          private int tid;
+      }
+      ```
+
+   2. ```java
+      @Data
+      @AllArgsConstructor
+      @NoArgsConstructor
+      public class Teacher {
+          private int id;
+          private String name;
+      }
+      ```
+
+2. 建立mapper接口
+
+   1. ```java
+      public interface StudentMapper {
+      
+          List<Student> findAll();
+      
+      
+      }
+      ```
+
+   2. ```java
+      public interface TeacherMapper {
+      }
+      ```
+
+3. 建立config.xml
+
+   1. ```xml
+      <?xml version="1.0" encoding="UTF-8" ?>
+      <!DOCTYPE configuration
+              PUBLIC "-//mybatis.org//DTD Config 3.0//EN"
+              "http://mybatis.org/dtd/mybatis-3-config.dtd">
+      <configuration>
+          <properties resource="mybatisconfig.properties"/>
+          <settings>
+              <setting name="logImpl" value="LOG4J"/>
+          </settings>
+          <typeAliases>
+              <package name="ssm.suyuesheng.domain"/>
+          </typeAliases>
+          <environments default="development">
+              <environment id="development">
+                  <transactionManager type="JDBC"></transactionManager>
+                  <dataSource type="POOLED">
+                      <property name="driver" value="${driver}"/>
+                      <property name="url" value="${url}"/>
+                      <property name="username" value="${username}"/>
+                      <property name="password" value="${password}"/>
+                  </dataSource>
+              </environment>
+          </environments>
+          <mappers>
+              <package name="ssm.suyuesheng.mapper"/>
+          </mappers>
+      </configuration>
+      ```
+
+4. 建立mapper.xml
+
+   1. ```xml
+      <?xml version="1.0" encoding="UTF-8" ?>
+      <!DOCTYPE mapper
+              PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN"
+              "http://mybatis.org/dtd/mybatis-3-mapper.dtd">
+      <mapper namespace="ssm.suyuesheng.mapper.StudentMapper">
+          <resultMap id="studentMap" type="ssm.suyuesheng.domain.Student">
+      
+          </resultMap>
+      
+          <select id="findAll" resultType="student">
+              select * from student
+          </select>
+      </mapper>
+      ```
+
+   2. ```xml
+      <?xml version="1.0" encoding="UTF-8" ?>
+      <!DOCTYPE mapper
+              PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN"
+              "http://mybatis.org/dtd/mybatis-3-mapper.dtd">
+      <mapper namespace="ssm.suyuesheng.mapper.TeacherMapper">
+      
+      </mapper>
+      ```
+
+5. 实验环境搭建是否成功
+
+   1. ```java
+      package ssm.suyuesheng.mapper;
+      
+      import org.apache.ibatis.session.SqlSession;
+      import org.junit.Test;
+      import ssm.suyuesheng.util.SqlSessionUtil;
+      
+      public class TestStudent {
+          @Test
+          public void testStart(){
+              SqlSession sqlSession = SqlSessionUtil.getSqlSession();
+              StudentMapper mapper = sqlSession.getMapper(StudentMapper.class);
+              System.out.println(mapper.findAll());
+          }
+      }
+      ```
