--- a/2020-4-18 mybaits 学习笔记 171812.md
+++ b/2020-4-18 mybaits 学习笔记 171812.md
@@ -1,6 +1,6 @@
 # mybatis 学习笔记
 
-[toc]
+[TOC]
 
 ## 0.简介
 
@@ -412,7 +412,7 @@ public interface UserDao {
   - `id` 方法名称
   - `parameterType`  参数类
     - **参数类的使用：参数类需要和接口中定义的一样，在标签里使用时要`${参数名称(和在接口中定义的一致)}`；如果参数类不是基础数据类型而是一个正常的类的话，在标签里使用要`${类的参数名称}`。**比方说 `resultType`是`User`，`User`类里面有`name`、`id`、`pwd`三个参数。那么在标签里填写sql语句时要是用`User`类的参数应该这样(假设select操作)：`select * from user where id=${id} and name=${name} and pwd=${pwd}`。*注意`${}`里面的参数名称和`User`类的参数名称一致*
-    - ![image-20200415141238657](mybaits%20%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/image-20200415141238657.png)
+    - ![image-20200415141238657](https://raw.githubusercontent.com/sogeisetsu/typoraimage/master/image-20200415141238657.png)
   - `resultType` 返回类
 - update delete insert 的几个重要参数
   - `id` 方法名称
@@ -478,7 +478,7 @@ https://mybatis.org/mybatis-3/zh/configuration.html#environments
 
 ### 配置文件的文档结构
 
-![image-20200416103707221](mybaits%20%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/image-20200416103707221.png)
+![image-20200416103707221](https://raw.githubusercontent.com/sogeisetsu/typoraimage/master/image-20200417013953299.png)
 
 
 
@@ -589,19 +589,19 @@ Usermapper.xml
 
 为一些基础的类型提供了默认的别名👇
 
-![image-20200417004836999](mybaits%20%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/image-20200417004836999.png)
+![image-20200417004836999](https://raw.githubusercontent.com/sogeisetsu/typoraimage/master/image-20200416103707221.png)
 
 ### 设置 setting
 
 暂时先记住下面几个
 
-![image-20200417013953299](mybaits%20%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/image-20200417013953299.png)
+![image-20200417013953299](https://raw.githubusercontent.com/sogeisetsu/typoraimage/master/image-20200417154336920.png)
 
-![image-20200417014056957](mybaits%20%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/image-20200417014056957.png)
+![image-20200417014056957](https://raw.githubusercontent.com/sogeisetsu/typoraimage/master/image-20200417014056957.png)
 
 ### 映射器 mappers
 
-![image-20200417020548244](mybaits%20%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/image-20200417020548244.png)
+![image-20200417020548244](https://raw.githubusercontent.com/sogeisetsu/typoraimage/master/image-20200417020548244.png)
 
 推荐使用第一个，第二个忽略，第三和第四个有两个要求  **1.`mapper.xml`文件必须放在`src/main/java`里面；2.`mapper.xml`的命名必须和接口名一样，比如接口名称`UserMapper.java`那么xml的名称应该是`UserMapper.xml`。_需要注意的是，虽然只有三和四的操作方式要求接口和配置文件名称一致，但是应该把这一条要求作为一个规范，也就是说以后接口和配置文件名称要保持一致 _**
 
@@ -623,7 +623,7 @@ Usermapper.xml
 
 在config.xml里面配置settings 里面的setting
 
-![image-20200417154336920](mybaits%20%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/image-20200417154336920.png)
+![image-20200417154336920](https://raw.githubusercontent.com/sogeisetsu/typoraimage/master/image-20200423062933070.png)
 
 - SLF4J 
 
@@ -761,7 +761,7 @@ public void testOne(){
 
 ## 8.面向注解
 
-![image-20200423062933070](2020-4-18%20mybaits%20%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0%20171812.assets/image-20200423062933070.png)
+![image-20200423062933070](https://raw.githubusercontent.com/sogeisetsu/typoraimage/master/image-20200420222810999.png)
 
 ```java
 public interface UserMapper {
@@ -781,7 +781,7 @@ public interface UserMapper {
 
 https://blog.csdn.net/u013552450/article/details/72528498
 
-![image-20200420222810999](image-20200420222810999.png)
+![image-20200420222810999](https://raw.githubusercontent.com/sogeisetsu/typoraimage/master/image-20200417004836999.png)
 
 
 
@@ -797,7 +797,7 @@ https://blog.csdn.net/u013552450/article/details/72528498
 
 *在idea安装*
 
-![在idea安装](2020-4-18%20mybaits%20%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0%20171812.assets/image-20200424162528788.png)
+![image-20200424172054317](https://raw.githubusercontent.com/sogeisetsu/typoraimage/master/image-20200424162528788.png)
 
 *导包*
 
@@ -850,7 +850,7 @@ public class User {
 
 因为添加了几个注解，好多方法就自动生成了👇
 
-![image-20200424164135826](2020-4-18%20mybaits%20%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0%20171812.assets/image-20200424164135826.png)
+![image-20200424164135826](https://raw.githubusercontent.com/sogeisetsu/typoraimage/master/image-20200424164135826.png)
 
 ## 10 多对一
 
@@ -889,7 +889,7 @@ select * from student;
 
 *关系👇*
 
-![image-20200424172054317](2020-4-18%20mybaits%20%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0%20171812.assets/image-20200424172054317.png)
+![在idea安装](https://raw.githubusercontent.com/sogeisetsu/typoraimage/master/image-20200424172054317.png)
 
 ### 10.2 环境搭建流程
 
@@ -1140,45 +1140,223 @@ insert into blog values('08','母猪的产后护理','本山','2010-01-01',121);
 
 参考之前的，无非就是复制黏贴
 
+*小知识：开启驼峰命名转换*
 
+```xml
+    <settings>
+        <setting name="logImpl" value="LOG4J"/>
+        <setting name="mapUnderscoreToCamelCase" value="true"/>
+    </settings>
+```
 
+### 12.2 if
 
+```xml
+ <select id="queryBlog" parameterType="map" resultType="blog">
+        select * from mybatisstudy.blog where 1=1
+        <if test="title!=null">
+            and title=#{title}
+        </if>
+        <if test="author!=null">
+            and author=#{author}
+        </if>
+        <if test="views!=null">
+            and views=#{views}
+        </if>
+        <if test="creatTime!=null">
+            and creat_time=#{creatTime}
+        </if>
+    </select>
+```
 
+### 12.3 where
 
+> *where* 元素只会在子元素返回任何内容的情况下才插入 “WHERE” 子句。而且，若子句的开头为 “AND” 或 “OR”，*where* 元素也会将它们去除。
 
+```xml
+<select id="queryBlog" parameterType="map" resultType="blog">
+        select * from mybatisstudy.blog
+        <where>
+            <if test="title!=null">
+                title=#{title}
+            </if>
+            <if test="author!=null">
+                and author=#{author}
+            </if>
+            <if test="views!=null">
+                and views=#{views}
+            </if>
+            <if test="creatTime!=null">
+                and creat_time=#{creatTime}
+            </if>
+        </where>
+    </select>
 
+```
 
+### 12.4 choose when otherwise
 
+> 有时候，我们不想使用所有的条件，而只是想从多个条件中选择一个使用。针对这种情况，MyBatis 提供了 choose 元素，它有点像 Java 中的 switch 语句。
+>
+> 还是上面的例子，但是策略变为：传入了 “title” 就按 “title” 查找，传入了 “author” 就按 “author” 查找的情形。若两者都没有传入，就返回标记为 featured 的 BLOG（这可能是管理员认为，与其返回大量的无意义随机 Blog，还不如返回一些由管理员挑选的 Blog）。
 
+```xml
+<select id="queryBlogChoose" parameterType="map" resultType="blog">
+    select * from mybatisstudy.blog
+    <where>
+        <choose>
+            <when test="title!=null">
+                title=#{title}
+            </when>
+            <when test="author!=null">
+                and author=#{author}
+            </when>
+            <when test="creatTime!=null">
+                and creat_time=#{creatTime}
+            </when>
+            <otherwise>
+                and views=#{views}
+            </otherwise>
+        </choose>
+    </where>
+</select>
+```
 
+**即使choose里面的所有条件都满足，在生成sql语句时也只用一个，这和switch很像**
 
+### 12.5 set
 
+用于更新
 
+```xml
+<update id="upadteSet" parameterType="blog">
+    update mybatisstudy.blog
+    <set>
+        <if test="author!=null">
+            author=#{author},
+        </if>
+        <if test="creatTime!=null">
+            creat_time=#{creatTime},
+        </if>
+        <if test="title!=null">
+            title=#{title},
+        </if>
+        <if test="views!=null">
+            views=#{views}
+        </if>
+    </set>
+    <where>
+        <choose>
+            <when test="id!=null">
+                id=#{id}
+            </when>
+            <otherwise>
+                id=ceshi
+            </otherwise>
+        </choose>
+    </where>
+</update>
+```
 
+### 问题： **关于mybatis写mapper.xml时 where、set、if等标签中`and`和`,`的问题**
 
+> *set* 元素会动态地在行首插入 SET 关键字，并会删掉额外的逗号
+>
+> *where* 元素只会在子元素返回任何内容的情况下才插入 “WHERE” 子句。而且，若子句的开头为 “AND” 或 “OR”，*where* 元素也会将它们去除。
+>
+> 来自 https://mybatis.org/mybatis-3/zh/dynamic-sql.html
 
+查询文档可知，mybatis的所谓智能只可以删除动态sql里面额外的东西，而不会增加什么，比如下面的代码👇,必然会出错，因为and不会凭空出现，sql语句可能会是`select * from mybatisstudy.blog where title= ? author=?`没有`and`这必然出错
 
+```xml
+<select id="queryBlog" parameterType="map" resultType="blog">
+    select * from mybatisstudy.blog
+    <where>
+        <if test="title!=null">
+            title=#{title}
+        </if>
+        <if test="author!=null">
+            author=#{author}
+        </if>
+        <if test="views!=null">
+            views=#{views}
+        </if>
+        <if test="creatTime!=null">
+            creat_time=#{creatTime}
+        </if>
+    </where>
+</select>
+```
 
+### 12.6 trim
 
+> 如果 *where* 元素与你期望的不太一样，你也可以通过自定义 trim 元素来定制 *where* 元素的功能。
+>
+> 与 *set* 元素等价的自定义 *trim* 元素
+>
+> 来源 https://mybatis.org/mybatis-3/zh/dynamic-sql.html
 
+先看个例子👇
 
+```xml
+<select id="queryBlog" parameterType="map" resultType="blog">
+    select * from mybatisstudy.blog
+    <trim prefix="WHERE" prefixOverrides="AND |OR">
+        <if test="title!=null">
+            title=#{title}
+        </if>
+        <if test="author!=null">
+            and author=#{author}
+        </if>
+        <if test="views!=null">
+            and views=#{views}
+        </if>
+        <if test="creatTime!=null">
+            and creat_time=#{creatTime}
+        </if>
+    </trim>
+</select>
+```
 
+> *prefixOverrides* 属性会忽略通过管道符分隔的文本序列（注意此例中的空格是必要的）。上述例子会移除所有 *prefixOverrides* 属性中指定的内容，并且插入 *prefix* 属性中指定的内容。
 
+*`prefixOverrides`* 的意思是会自动删除的前缀包括哪些内容
 
+![](https://raw.githubusercontent.com/sogeisetsu/typoraimage/master/20200426214200.png)
 
+`suffixOverrides`的意思是会自动删除的后缀包括哪些内容，在`set`标签里面会自动删除的就是`,`了
 
+用`trim`的一个例子👇
 
-
-
-
-
-
-
-
-
-
-
-
+```xml
+<update id="upadteSet" parameterType="blog">
+    update mybatisstudy.blog
+    <trim prefix="SET" suffixOverrides=",">
+        <if test="author!=null">
+            author=#{author},
+        </if>
+        <if test="creatTime!=null">
+            creat_time=#{creatTime},
+        </if>
+        <if test="title!=null">
+            title=#{title},
+        </if>
+        <if test="views!=null">
+            views=#{views},
+        </if>
+    </trim>
+    <trim prefix="WHERE" prefixOverrides="AND |OR">
+        <choose>
+            <when test="id!=null">
+                id=#{id}
+            </when>
+            <otherwise>
+                id=ceshi
+            </otherwise>
+        </choose>
+    </trim>
+</update>
+```
 
 
 
