--- a/2020-4-18 mybaits 学习笔记 171812.md
+++ b/2020-4-18 mybaits 学习笔记 171812.md
@@ -1,5 +1,7 @@
 # mybatis 学习笔记
 
+## 目录
+
 [TOC]
 
 ## 0.简介
@@ -1149,7 +1151,7 @@ insert into blog values('08','母猪的产后护理','本山','2010-01-01',121);
     </settings>
 ```
 
-### 12.2 if
+### 12.2` if`
 
 ```xml
  <select id="queryBlog" parameterType="map" resultType="blog">
@@ -1169,7 +1171,7 @@ insert into blog values('08','母猪的产后护理','本山','2010-01-01',121);
     </select>
 ```
 
-### 12.3 where
+### 12.3 `where`
 
 > *where* 元素只会在子元素返回任何内容的情况下才插入 “WHERE” 子句。而且，若子句的开头为 “AND” 或 “OR”，*where* 元素也会将它们去除。
 
@@ -1194,7 +1196,7 @@ insert into blog values('08','母猪的产后护理','本山','2010-01-01',121);
 
 ```
 
-### 12.4 choose when otherwise
+### 12.4 `choose`、 `when `、`otherwise`
 
 > 有时候，我们不想使用所有的条件，而只是想从多个条件中选择一个使用。针对这种情况，MyBatis 提供了 choose 元素，它有点像 Java 中的 switch 语句。
 >
@@ -1224,7 +1226,7 @@ insert into blog values('08','母猪的产后护理','本山','2010-01-01',121);
 
 **即使choose里面的所有条件都满足，在生成sql语句时也只用一个，这和switch很像**
 
-### 12.5 set
+### 12.5 `set`
 
 用于更新
 
@@ -1288,11 +1290,11 @@ insert into blog values('08','母猪的产后护理','本山','2010-01-01',121);
 </select>
 ```
 
-### 12.6 trim
+### 12.6 `trim`
 
 > 如果 *where* 元素与你期望的不太一样，你也可以通过自定义 trim 元素来定制 *where* 元素的功能。
 >
-> 与 *set* 元素等价的自定义 *trim* 元素
+> 与 *set* 元素**等价**的自定义 *trim* 元素
 >
 > 来源 https://mybatis.org/mybatis-3/zh/dynamic-sql.html
 
@@ -1357,6 +1359,77 @@ insert into blog values('08','母猪的产后护理','本山','2010-01-01',121);
     </trim>
 </update>
 ```
+
+### 12.7 `froeach`
+
+> 动态 SQL 的另一个常见使用场景是对集合进行遍历（尤其是在构建 IN 条件语句的时候）。比如：
+>
+> ```xml
+>  <select id="selectPostIn" resultType="domain.blog.Post">
+>   SELECT *
+>   FROM POST P
+>   WHERE ID in
+>   <foreach item="item" index="index" collection="list"
+>       open="(" separator="," close=")">
+>         #{item}
+>   </foreach>
+> </select>
+> ```
+>
+> 
+
+### 12.8 `include `代码复用
+
+在mapper.xml里面`sql`和`include`相结合可以进行代码复用 ,`sql`标签指定id名称，`include`标签用`refid`属性去指定`sql`标签里面的内容，达到代码复用的效果。
+
+```xml
+<sql id="queryBlogcopy">
+    <if test="title!=null">
+        title=#{title}
+    </if>
+    <if test="author!=null">
+        and author=#{author}
+    </if>
+    <if test="views!=null">
+        and views=#{views}
+    </if>
+    <if test="creatTime!=null">
+        and creat_time=#{creatTime}
+    </if>
+</sql>
+<select id="queryBlog" parameterType="map" resultType="blog">
+    select * from mybatisstudy.blog
+    <trim prefix="WHERE" prefixOverrides="AND |OR">
+        <include refid="queryBlogcopy"/>
+    </trim>
+</select>
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
