--- a/2020-4-18 mybaits 学习笔记 171812.md
+++ b/2020-4-18 mybaits 学习笔记 171812.md
@@ -1,5 +1,7 @@
 # mybatis 学习笔记
 
+**转载请注明来源 https://www.cnblogs.com/sogeisetsu/  原文可以到的github下载 [https://github.com/sogeisetsu/myBlog/blob/master/2020-4-18%20mybaits%20%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0%20171812.md](https://github.com/sogeisetsu/myBlog/blob/master/2020-4-18 mybaits 学习笔记 171812.md)**
+
 [TOC]
 
 ## 0.简介
