--- a/代理设计模式.md
+++ b/代理设计模式.md
@@ -8,13 +8,13 @@
 
 **proxy类是什么？是一个在创建(即实例化)后在运行时会实现很多特殊接口的类**
 
-**proxy类的表现？先明确一个概念: ==代理接口指的是被proxy类实现的接口==。==代理实例指的是proxy类的实例化对象== 。每一个代理实例都会关联**(*所谓关联，即和什么东西有关系。比如和狗有关联，即和狗有某关系，仅此而已*)**一个被称作`invocation handler object`**(译作调用帮手？)**的object。这个object实现了一个叫`InvocationHandler`的接口。一个代理实例的方法调用通过代理接口被发送到`invocation handler object`的调用方法**( the invoke method)**,通过代理实例， a java.lang.reflect.Method object找到被调用的方法**( the invoke method)**和包含数据的数组。返回的结果将作为代理实例上方法调用的结果返回**
+**proxy类的表现？先明确一个概念: 代理接口指的是被proxy类实现的接口。代理实例指的是proxy类的实例化对象 。每一个代理实例都会关联**(*所谓关联，即和什么东西有关系。比如和狗有关联，即和狗有某关系，仅此而已*)**一个被称作`invocation handler object`**(译作调用帮手？)**的object。这个object实现了一个叫`InvocationHandler`的接口。一个代理实例的方法调用通过代理接口被发送到`invocation handler object`的调用方法**( the invoke method)**,通过代理实例， a java.lang.reflect.Method object找到被调用的方法**( the invoke method)**和包含数据的数组。返回的结果将作为代理实例上方法调用的结果返回**
 
 ## InvocationHandler
 
 `InvocationHandler`是一个接口，通过实现这个接口变成`invocation handler object`。有一个方法叫invoke
 
-![image-20200318013340997](%E4%BB%A3%E7%90%86%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/image-20200318013340997.png)
+![image-20200318013340997](http://q9efxddri.bkt.clouddn.com/20200502025308.png)
 
 <hr>
 
@@ -135,7 +135,7 @@ public class Main {
 
 [简书 动态代理模式](https://www.jianshu.com/p/305c8da4563d)
 
-![image-20200318132908799](%E4%BB%A3%E7%90%86%E8%AE%BE%E8%AE%A1%E6%A8%A1%E5%BC%8F/image-20200318132908799.png)
+![image-20200318132908799](http://q9efxddri.bkt.clouddn.com/20200502025309.png)
 
 ​	即返回了一个实现了ISale接口的ISale实例化对象，且ISale实例化对象的方法已经按照`saleProxy`里定义的内容所修改增加。
 
