--- a/代理设计模式.md
+++ b/代理设计模式.md
@@ -14,7 +14,7 @@
 
 `InvocationHandler`是一个接口，通过实现这个接口变成`invocation handler object`。有一个方法叫invoke
 
-![image-20200318013340997](http://q9efxddri.bkt.clouddn.com/20200502025308.png)
+![image-20200318013340997](https://suyueshengtuchuang.oss-cn-beijing.aliyuncs.com/20200523113704.png)
 
 <hr>
 
@@ -135,7 +135,7 @@ public class Main {
 
 [简书 动态代理模式](https://www.jianshu.com/p/305c8da4563d)
 
-![image-20200318132908799](http://q9efxddri.bkt.clouddn.com/20200502025309.png)
+![image-20200318132908799](https://suyueshengtuchuang.oss-cn-beijing.aliyuncs.com/20200523113712.png)
 
 ​	即返回了一个实现了ISale接口的ISale实例化对象，且ISale实例化对象的方法已经按照`saleProxy`里定义的内容所修改增加。
 
