--- a/2020-4-18 mybaits 学习笔记 171812.md
+++ b/2020-4-18 mybaits 学习笔记 171812.md
@@ -1358,6 +1358,10 @@ insert into blog values('08','母猪的产后护理','本山','2010-01-01',121);
 </update>
 ```
 
+**suffix的意思是会在后面增加某个内容，prefix的意思是会在前面增加某个内容，suffixoverrides的意思是会在删除最后一个某内容，preffixoverrides的意思是会在删除第一个某内容**
+
+![](https://suyuesheng-biaozhun-blog-tupian.oss-cn-qingdao.aliyuncs.com/blogimg/20200806125813.png)
+
 ### 12.7 `froeach`
 
 > 动态 SQL 的另一个常见使用场景是对集合进行遍历（尤其是在构建 IN 条件语句的时候）。比如：
@@ -1390,6 +1394,8 @@ mapper.xml👇。一个集合里面有一个value为list集合，key为ids的一
 ```
 
 java代码👇
+
+> 你**可以将任何可迭代对象（如 List、Set 等）、Map 对象或者数组对象作为集合参数传递给 *foreach*。**当使用可迭代对象或者数组时，index 是当前迭代的序号，item 的值是本次迭代获取到的元素。当**使用 Map 对象（或者 Map.Entry 对象的集合）时，index 是键，item 是值。**
 
 ```java
 @Test
@@ -1726,7 +1732,7 @@ public void testTwoH() {
 
 ##### **注意：重点：二级缓存需要一级缓存死掉后才会有效**
 
-<img src="http://q9efxddri.bkt.clouddn.com/20200428150739.png"/>
+![](https://suyueshengtuchuang.oss-cn-beijing.aliyuncs.com/20200523105635.png)
 
 如果像下面一样，一级缓存没有死，那么二级缓存就不会有东西👇
 
