--- a/2020-4-18 mybaits 学习笔记 171812.md
+++ b/2020-4-18 mybaits 学习笔记 171812.md
@@ -1624,7 +1624,7 @@ public void testOneH(){
 #### 注意：手动清理缓存
 
 ```java
-sqlSession.clearCache();
+sqlSession.clearCache();  //这只能清除一级缓存
 ```
 
 #### **一级缓存更新的几个条件**
@@ -1732,7 +1732,7 @@ public void testTwoH() {
 
 ##### **注意：重点：二级缓存需要一级缓存死掉后才会有效**
 
-![](https://suyueshengtuchuang.oss-cn-beijing.aliyuncs.com/20200523105635.png)
+![](https://suyuesheng-biaozhun-blog-tupian.oss-cn-qingdao.aliyuncs.com/blogimg/20200811141825.png)
 
 如果像下面一样，一级缓存没有死，那么二级缓存就不会有东西👇
 
